--- a/client-config-production.properties
+++ b/client-config-production.properties
@@ -1,2 +1,2 @@
-msg = Hello world - this is from config server - Prodcution Environment
-var = New variable
+msg = Hello world - this is from config server - Prodcution Environment-from github
+var = New variable-from github
